Added sockets, env URL , page not found

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,6 +1,5 @@
 <app-header></app-header>
 <main>
-  <app-post-create></app-post-create>
-  <app-post-list (deleteRequest)="onDeleteRequest($event)" (editRequest)="onEditRequest($event)"></app-post-list>
+  <router-outlet></router-outlet>
 </main>
 
