--- a/frontend/src/app/posts/post-create/post-create.component.html
+++ b/frontend/src/app/posts/post-create/post-create.component.html
@@ -7,6 +7,7 @@
         name="title"
         ngModel
         required
+        maxlength="50"
         placeholder="Title"
         #title="ngModel">
         <mat-error *ngIf="title.invalid">Title is required</mat-error>
