--- a/frontend/src/app/authentication/login/login.component.html
+++ b/frontend/src/app/authentication/login/login.component.html
@@ -1,4 +1,6 @@
 <div class="center">
+  <h1>Login</h1>
   <app-login-entry #entry></app-login-entry>
-  <button mat-button class="good-button button" type="button" (click)="login(entry.getUsername(),entry.getPassword())">Login</button>
+  <button mat-raised-button class="good-button" type="button" (click)="login(entry.getUsername(),entry.getPassword())">Login</button>
+  <button mat-button type="button" routerLink='/register'>Register</button>
 </div>
