--- a/frontend/src/app/authentication/register/register.component.html
+++ b/frontend/src/app/authentication/register/register.component.html
@@ -1,4 +1,6 @@
 <div class="center">
+  <h1>Register</h1>
   <app-login-entry #entry></app-login-entry>
-  <button mat-button class="good-button button" type="button" (click)="register(entry.getUsername(),entry.getPassword())">Register</button>
+  <button mat-button class="good-button" type="button" (click)="register(entry.getUsername(),entry.getPassword())">Register</button>
+  <button mat-button type="button" routerLink='/login'>Cancel</button>
 </div>
